--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Veronica <veronica.21.coutts@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "node ./src/bot.js"
+  },
   "dependencies": {
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0"
